crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__builtins__mk_nil_pair_data.snap
---
source: crates/nash-codegen/src/build/tests/source/builtins.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Data exposing (toData)\nmain : bool\nmain = equalsData\n    (toData (Builtin.mapData (Builtin.mkNilPairData ())))\n    (toData (Builtin.mapData (Builtin.mkNilPairData ())))\n"
---
--- unoptimized Core
let toData#2 : 'erased -> Data = \coerce#4 : 'erased -> coerce#4 in
let fromUnit#3 : unit -> unit = \value#5 : unit -> value#5 in
let main#1 : bool = equalsData (toData#2 (mapData (mkNilPairData (fromUnit#3 ())))) (toData#2 (mapData (mkNilPairData (fromUnit#3 ())))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam toData_2
    [(lam fromUnit_3
      [(lam main_1 main_1)
        [[(builtin equalsData)
          [toData_2
            [(builtin mapData) [(builtin mkNilPairData) [fromUnit_3 (con unit ())]]]]]
          [toData_2
            [(builtin mapData) [(builtin mkNilPairData) [fromUnit_3 (con unit ())]]]]]])
      (lam value_5 value_5)])
    (lam coerce_4 coerce_4)])
--- optimized Core
true
--- optimized UPLC
(program 1.1.0 (con bool True))
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 1702638, memory: 3629
