crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__builtins__mk_pair_data.snap
---
source: crates/nash-codegen/src/build/tests/source/builtins.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Data exposing (toData)\nmain : bool\nmain = equalsData\n    (toData (Builtin.fstPair (Builtin.mkPairData (Builtin.iData 1) (Builtin.iData 2))))\n    (toData (Builtin.iData 1))\n"
---
--- unoptimized Core
let toData#2 : 'erased -> Data = \coerce#4 : 'erased -> coerce#4 in
let fromInt#3 : int -> int = \value#5 : int -> value#5 in
let evaluated#6 : pair Int Int = mkPairData (iData (fromInt#3 1)) (iData (fromInt#3 2)) in
let projection#7 : Int = fstPair evaluated#6 in
let main#1 : bool = equalsData (toData#2 projection#7) (toData#2 (iData (fromInt#3 1))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam toData_2
    [(lam fromInt_3
      [(lam evaluated_6
        [(lam projection_7
          [(lam main_1 main_1)
            [[(builtin equalsData) [toData_2 projection_7]]
              [toData_2 [(builtin iData) [fromInt_3 (con integer 1)]]]]])
          [(force (force (builtin fstPair))) evaluated_6]])
        [[(builtin mkPairData) [(builtin iData) [fromInt_3 (con integer 1)]]]
          [(builtin iData) [fromInt_3 (con integer 2)]]]])
      (lam value_5 value_5)])
    (lam coerce_4 coerce_4)])
--- optimized Core
true
--- optimized UPLC
(program 1.1.0 (con bool True))
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 2017981, memory: 5161
